# Galanext

./: .gitignore  CMakeLists.txt  Galanext  build.sh  readme.md  readme.txt  startGalanext.sh  start_galanext.sh
cmake_modules/: FindSFML.cmake
doc/: doxyfile  index.html
doc/html/: _keyboard_spaceship_controller_8hpp_source.html  _shot_8hpp_source.html  _space_8hpp_source.html  _spaceship_8hpp_source.html  _spaceship_controller_8hpp_source.html  annotated.html  (+28 more)
include/: AIEnemiesGroupController.hpp  AISpaceshipController.hpp  Config.hpp  CpuSpaceshipController.hpp  EnemiesGroup.hpp  Game.hpp  Highscore.hpp  IntroScreens.hpp  KeyboardSpaceshipController.hpp  Log.hpp  Shot.hpp  Space.hpp  Spaceship.hpp  SpaceshipController.hpp  config.hpp  config.hpp.in  version.hpp  version.hpp.in
linux/: Galanext-dev  libsfml-network.so.2.3  libsfml-window.so.2.3
shared-libs/: libGL.so.1  libsfml-audio.so.2.3  libsfml-graphics.so.2.1  libsfml-graphics.so.2.2.0  libsfml-graphics.so.2.3  libsfml-system.so.2.1  libsfml-window.so.2.1  libsfml-window.so.2.2.0  libxcb-randr.so.0
src/: AIEnemiesGroupController.cpp  AISpaceshipController.cpp  AISpaceshipController.hpp  Config.cpp  CpuSpaceshipController.cpp  EnemiesGroup.cpp  EnemiesGroup.hpp  Game.cpp  Game.hpp  Highscore.cpp  IntroScreens.cpp  JoystickSpaceshipController.cpp  JoystickSpaceshipController.hpp  KeyboardSpaceshipController.cpp  KeyboardSpaceshipController.hpp  Log.cpp  Shot.cpp  Shot.hpp  Space.cpp  Space.hpp  Spaceship.cpp  Spaceship.hpp  SpaceshipController.cpp  SpaceshipController.hpp  constants.hpp  main.cpp
(+15 files in other folders)
